# fused-effects-mwc-random

./: CHANGELOG.md  README.md  fused-effects-mwc-random.cabal
.github/workflows/: haskell.yml
bench/: Bench.hs
src/: FusedEffectsMwcRandom.hs
src/Control/Carrier/Random/: IO.hs  Instances.hs  Lifted.hs
src/Control/Carrier/Random/Uniform/: IO.hs
src/Control/Effect/: Random.hs
src/Control/Effect/Random/: Uniform.hs
test/: Magic.hs  Test.hs
