cabal-version:       2.0
name:                fused-effects-mwc-random
version:             0.0.0.0
synopsis:            High-quality random number generation as an effect.
description:         High-quality random number generation as an effect.
homepage:            https://github.com/patrickt/fused-effects-mwc-random
bug-reports:         https://github.com/patrickt/fused-effects-mwc-random/issues
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           2020 Patrick Thomson
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/patrickt/fused-effects-mwc-random.git

library
  hs-source-dirs:      src
  exposed-modules:     Control.Carrier.Random.Uniform.IO
                     , Control.Effect.Random.Uniform


  build-depends:       base >= 4.10.1.0 && < 4.14
                     , fused-effects ^>= 1
                     , mwc-random >= 0.13.6 && < 0.15


  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
